--- a/lightModal/lightModal.css
+++ b/lightModal/lightModal.css
@@ -1,4 +1,4 @@
-.modal {
+.lm-modal {
   position: absolute;
   z-index: 11000;
   background-color: #fff;
@@ -10,7 +10,7 @@
   border-radius: 10px;
   width: 400px; }
 
-.light-modal-close {
+.lm-close {
   position: absolute;
   top: 18px;
   right: 18px;
@@ -21,10 +21,10 @@
   width: 14px;
   text-indent: -999px;
   overflow: hidden; }
-  .light-modal-close:hover {
+  .lm-close:hover {
     background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAA4AAAAOCAYAAAAfSC3RAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAIRJREFUeNqcktsNwCAIRaHx3w06gyPZyXSjOkMXadGoaQmShpugJHgMLwDSvYMnO8kSLFRj%2FY0HBt3d0gIa8QZjdSgW2NuMFxwDoiuyeHH1EMBIwPSFzAsqv67UssF3HT%2FgWYLWBG6fpm1glDlVe3MUKCvjyE6YIV8ACQ7mlQPrkj8CDAAWrWnHZ9nsgwAAAABJRU5ErkJggg%3D%3D); }
 
-.light-modal-overlay {
+.lm-overlay {
   position: fixed;
   z-index: 10000;
   top: 0;
